manifests/production/piraeus-operator/apps_v1_deployment_piraeus-operator-gencert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: piraeus-operator-gencert
    app.kubernetes.io/name: piraeus-datastore
  name: piraeus-operator-gencert
  namespace: piraeus-datastore
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: piraeus-operator-gencert
      app.kubernetes.io/name: piraeus-datastore
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: gencert
      labels:
        app.kubernetes.io/component: piraeus-operator-gencert
        app.kubernetes.io/name: piraeus-datastore
    spec:
      containers:
      - args:
        - --leader-elect
        - --namespace=$(NAMESPACE)
        - --zap-devel=$(ZAP_DEVEL)
        - --webhook-configuration-name=$(WEBHOOK_CONFIGURATION_NAME)
        - --webhook-service-name=$(WEBHOOK_SERVICE_NAME)
        - --webhook-tls-secret-name=$(WEBHOOK_TLS_SECRET_NAME)
        command:
        - /gencert
        image: quay.io/piraeusdatastore/piraeus-operator:v2.10.8
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: gencert
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 5m
            memory: 32Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
      priorityClassName: system-cluster-critical
      securityContext:
        runAsNonRoot: true
      serviceAccountName: piraeus-operator-gencert
      terminationGracePeriodSeconds: 10
      tolerations:
      - effect: NoSchedule
        key: drbd.linbit.com/lost-quorum
      - effect: NoSchedule
        key: drbd.linbit.com/force-io-error
